syntax = "proto3";
package blockchain;
option go_package = "mikhud/blockchain.v1;blockchain";
import "node.proto";

service BlockchainNode {
  rpc Receive(stream Packet) returns (stream Packet) {}
}

message Packet {
  repeated node.PID targets = 1;
  repeated node.PID senders = 2;
  repeated Message messages = 3;
  repeated string typeNames = 4;
}

message Message {
  bytes data = 1;
  int32 targetIndex = 2;
  int32 senderIndex = 3;
  int32 typeNameIndex = 4;
}

message TransactionRequest {
  string senderPublicKey = 1;
  string senderPrivateKey = 2;
  string senderBlockchainAddress = 3;
  string recipientBlockchainAddress = 4;
  float value = 5;
}

message TestMessage {
  bytes data = 1;
}
